--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MOGO_URI = "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/"
+MONGO_URI = "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/"
+JWT_SECRET=201120
+NODE_ENV = development
