--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-MONGO_URI = "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/"
+MONGO_URI = "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/onlinecinema"
 JWT_SECRET=201120
-NODE_ENV = development
