--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI = "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/onlinecinema"
-JWT_SECRET=201120
+JWT_SECRET = 201120
+PORT = 4200
