--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
     "version": 2,
+    "env": {
+        "MONGO_URI": "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/onlinecinema"
+    },
     "builds": [
         {
             "src": "src/main.ts",
             "use": "@vercel/node"
         }
     ],
-    "routes":[
+    "routes": [
         {
             "src": "/(.*)",
             "dest": "src/main.ts",
