--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI = "mongodb+srv://zabor:zabor21n@onlinecinema.jnrvdqx.mongodb.net/onlinecinema"
 JWT_SECRET = 201120
 PORT = 4200
+NODE_ENV = production 
